--- a/form.html
+++ b/form.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ลงทะเบียน</title>
+    <style>
+        form {
+            border:2px solid blue;
+        }
+        input{
+            border: 2px solid gold;
+        }
+    </style>
 </head>
 <body>
     <h1 align="center">แบบฟอร์มลงทะเบียน</h1>
@@ -84,5 +92,6 @@
             <button type="reset">ล้างข้อมูล</button>
         </div>
     </form>
+    <span style="border:1px solid green;">Nooooooooooooooo</span>
 </body>
 </html>
